syntax = "proto3";

package manifest;

option go_package = "github.com/hostfactor/apps/gen/go/manifest";

message AppManifest {
  // The name of the container.
  string name = 1;
  // The author of the container
  string author = 2;
  // A short description for the container
  string description = 3;
  repeated Build builds = 4;
}

message BuildSpec {
  repeated string tags = 1;
  // The docker context.
  string context = 2;
  map<string, string> build_args = 3 [json_name = "build_args"];
}

// Generates an image under the scope of the app.
message Build {
  // The name of the feature. Used as a post-fix for identifying this particular app.
  string name = 1;
  BuildSpec spec = 2;
  FeatureWatch watch = 3;
  string description = 4;
}

message FeatureWatch {
  message GithubRelease {
    string repo = 1;
  }

  optional GithubRelease github_release = 1 [json_name = "github_release"];
}
